--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@axeridev/plexi-core-terminal",
   "version": "0.0.1",
   "description": "PlexiCore Framework Component | Terminal helper",
-  "main": "./src/PlexiCore.js",
+  "main": "./src/PlexiCoreTerminal.js",
   "dependencies": {
     "chalk": "^4.1.1",
     "typescript": "^4.3.5"
